--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,6 +10,7 @@
         Number:
         <input type="text" id="n1">
         <p>
+            <button onclick="inverse()"> 1/x </button>
             <button onclick="square()"> x^2 </button>
             <button onclick="cube()"> x^3 </button>
         </p>
@@ -21,6 +22,10 @@
             function square() {
                 var num = document.getElementById("n1");
                 num.value = Math.pow(num.value, 2);
+            }
+            function inverse() {
+                var num = document.getElementById("n1");
+                num.value = 1/num.value;
             }
         </script>
     </body>
